--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -243,6 +243,7 @@
        "      <th>Publisher</th>\n",
        "      <th>Weeks on List</th>\n",
        "      <th>On a Celebrity Reading List</th>\n",
+       "      <th>Current Context</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -255,6 +256,7 @@
        "      <td>Steerforth</td>\n",
        "      <td>8</td>\n",
        "      <td>False</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -265,6 +267,7 @@
        "      <td>Penguin</td>\n",
        "      <td>6</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -275,6 +278,7 @@
        "      <td>Harper Perennial</td>\n",
        "      <td>84</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -285,6 +289,7 @@
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>184</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -295,9 +300,11 @@
        "      <td>Spiegel &amp; Grau</td>\n",
        "      <td>45</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -315,6 +322,7 @@
        "      <td>Vintage</td>\n",
        "      <td>38</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3131</th>\n",
@@ -325,6 +333,7 @@
        "      <td>Random House</td>\n",
        "      <td>13</td>\n",
        "      <td>False</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3132</th>\n",
@@ -335,6 +344,7 @@
        "      <td>Morrow</td>\n",
        "      <td>106</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3133</th>\n",
@@ -345,6 +355,7 @@
        "      <td>Back Bay</td>\n",
        "      <td>8</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3134</th>\n",
@@ -355,10 +366,11 @@
        "      <td>Scribner</td>\n",
        "      <td>4</td>\n",
        "      <td>False</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3135 rows × 7 columns</p>\n",
+       "<p>3135 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -388,20 +400,20 @@
        "3133          Stacy Schiff    14          Back Bay              8   \n",
        "3134  Siddhartha Mukherjee    15          Scribner              4   \n",
        "\n",
-       "      On a Celebrity Reading List  \n",
-       "0                           False  \n",
-       "1                           False  \n",
-       "2                           False  \n",
-       "3                           False  \n",
-       "4                           False  \n",
-       "...                           ...  \n",
-       "3130                        False  \n",
-       "3131                        False  \n",
-       "3132                        False  \n",
-       "3133                        False  \n",
-       "3134                        False  \n",
+       "      On a Celebrity Reading List Current Context  \n",
+       "0                           False              No  \n",
+       "1                           False             Yes  \n",
+       "2                           False             Yes  \n",
+       "3                           False             Yes  \n",
+       "4                           False             Yes  \n",
+       "...                           ...             ...  \n",
+       "3130                        False             Yes  \n",
+       "3131                        False              No  \n",
+       "3132                        False             Yes  \n",
+       "3133                        False             Yes  \n",
+       "3134                        False             Yes  \n",
        "\n",
-       "[3135 rows x 7 columns]"
+       "[3135 rows x 8 columns]"
       ]
      },
      "execution_count": 1,
