Added data processing for max_weeks on list as well as num_bestsellers

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -25,7 +25,7 @@
     "# Names\n",
     "\n",
     "- Neha Nair\n",
-    "- Hulk\n",
+    "- Pranav Soma\n",
     "- Iron Man\n",
     "- Thor\n",
     "- Wasp"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[3135 rows x 8 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,6 +428,37 @@
     "df['Date'] = df2['Year on List']\n",
     "df = df.rename(columns={'Date':'Year on List'})\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = {}\n",
+    "titles = {}\n",
+    "\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    title = row['Title']\n",
+    "    author = row['Author']\n",
+    "    weeks_on_list = row['Weeks on List']\n",
+    "    if author in authors:\n",
+    "        authors[author] += 1\n",
+    "    else:\n",
+    "        authors[author] = 1\n",
+    "\n",
+    "    if title in titles:\n",
+    "        if int(weeks_on_list) > titles[title]:\n",
+    "            titles[title] = weeks_on_list\n",
+    "    else:\n",
+    "        titles[title] = weeks_on_list\n",
+    "\n",
+    "df['Max Weeks on List'] = df['Title'].map(titles)\n",
+    "df['# of Author Bestsellers'] = df['Author'].map(authors)\n",
+    "\n",
+    "df.to_csv('NYTinfo_processed.csv', index=False)"
    ]
   },
   {
