updated dataset to include more variables

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -212,6 +212,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = {}\n",
+    "titles = {}\n",
+    "\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    title = row['Title']\n",
+    "    author = row['Author']\n",
+    "    weeks_on_list = row['Weeks on List']\n",
+    "    if author in authors:\n",
+    "        authors[author] += 1\n",
+    "    else:\n",
+    "        authors[author] = 1\n",
+    "\n",
+    "    if title in titles:\n",
+    "        if int(weeks_on_list) > titles[title]:\n",
+    "            titles[title] = weeks_on_list\n",
+    "    else:\n",
+    "        titles[title] = weeks_on_list\n",
+    "\n",
+    "df['Max Weeks on List'] = df['Title'].map(titles)\n",
+    "df['# of Author Bestsellers'] = df['Author'].map(authors)\n",
+    "\n",
+    "df.to_csv('NYTinfo_processed.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -244,6 +275,8 @@
        "      <th>Weeks on List</th>\n",
        "      <th>On a Celebrity Reading List</th>\n",
        "      <th>Current Context</th>\n",
+       "      <th>Max Weeks on List</th>\n",
+       "      <th># of Author Bestsellers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -257,6 +290,8 @@
        "      <td>8</td>\n",
        "      <td>False</td>\n",
        "      <td>No</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -268,6 +303,8 @@
        "      <td>6</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>18</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -279,6 +316,8 @@
        "      <td>84</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>208</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -290,6 +329,8 @@
        "      <td>184</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>309</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -301,9 +342,13 @@
        "      <td>45</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>209</td>\n",
+       "      <td>165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -323,6 +368,8 @@
        "      <td>38</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>38</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3131</th>\n",
@@ -334,6 +381,8 @@
        "      <td>13</td>\n",
        "      <td>False</td>\n",
        "      <td>No</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3132</th>\n",
@@ -345,6 +394,8 @@
        "      <td>106</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>106</td>\n",
+       "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3133</th>\n",
@@ -356,6 +407,8 @@
        "      <td>8</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3134</th>\n",
@@ -367,10 +420,12 @@
        "      <td>4</td>\n",
        "      <td>False</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3135 rows × 8 columns</p>\n",
+       "<p>3135 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -400,20 +455,33 @@
        "3133          Stacy Schiff    14          Back Bay              8   \n",
        "3134  Siddhartha Mukherjee    15          Scribner              4   \n",
        "\n",
-       "      On a Celebrity Reading List Current Context  \n",
-       "0                           False              No  \n",
-       "1                           False             Yes  \n",
-       "2                           False             Yes  \n",
-       "3                           False             Yes  \n",
-       "4                           False             Yes  \n",
-       "...                           ...             ...  \n",
-       "3130                        False             Yes  \n",
-       "3131                        False              No  \n",
-       "3132                        False             Yes  \n",
-       "3133                        False             Yes  \n",
-       "3134                        False             Yes  \n",
+       "      On a Celebrity Reading List Current Context  Max Weeks on List  \\\n",
+       "0                           False              No                 11   \n",
+       "1                           False             Yes                 18   \n",
+       "2                           False             Yes                208   \n",
+       "3                           False             Yes                309   \n",
+       "4                           False             Yes                209   \n",
+       "...                           ...             ...                ...   \n",
+       "3130                        False             Yes                 38   \n",
+       "3131                        False              No                 13   \n",
+       "3132                        False             Yes                106   \n",
+       "3133                        False             Yes                  8   \n",
+       "3134                        False             Yes                  4   \n",
        "\n",
-       "[3135 rows x 8 columns]"
+       "      # of Author Bestsellers  \n",
+       "0                           4  \n",
+       "1                          13  \n",
+       "2                         128  \n",
+       "3                         126  \n",
+       "4                         165  \n",
+       "...                       ...  \n",
+       "3130                       38  \n",
+       "3131                       13  \n",
+       "3132                      106  \n",
+       "3133                        8  \n",
+       "3134                        4  \n",
+       "\n",
+       "[3135 rows x 10 columns]"
       ]
      },
      "execution_count": 2,
@@ -424,41 +492,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"NYTInfo_Revised.csv\")\n",
-    "df2 = pd.read_csv(\"NYTinfo.csv\")\n",
-    "df['Date'] = df2['Year on List']\n",
-    "df = df.rename(columns={'Date':'Year on List'})\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "authors = {}\n",
-    "titles = {}\n",
-    "\n",
-    "\n",
-    "for index, row in df.iterrows():\n",
-    "    title = row['Title']\n",
-    "    author = row['Author']\n",
-    "    weeks_on_list = row['Weeks on List']\n",
-    "    if author in authors:\n",
-    "        authors[author] += 1\n",
-    "    else:\n",
-    "        authors[author] = 1\n",
-    "\n",
-    "    if title in titles:\n",
-    "        if int(weeks_on_list) > titles[title]:\n",
-    "            titles[title] = weeks_on_list\n",
-    "    else:\n",
-    "        titles[title] = weeks_on_list\n",
-    "\n",
-    "df['Max Weeks on List'] = df['Title'].map(titles)\n",
-    "df['# of Author Bestsellers'] = df['Author'].map(authors)\n",
-    "\n",
-    "df.to_csv('NYTinfo_processed.csv', index=False)"
    ]
   },
   {
