deleted old csv files

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +277,9 @@
        "      <th>Current Context</th>\n",
        "      <th>Max Weeks on List</th>\n",
        "      <th># of Author Bestsellers</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Awards Count</th>\n",
+       "      <th>Publication Season</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -292,6 +295,9 @@
        "      <td>No</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>4.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -305,6 +311,9 @@
        "      <td>Yes</td>\n",
        "      <td>18</td>\n",
        "      <td>13</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Fall</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -318,6 +327,9 @@
        "      <td>Yes</td>\n",
        "      <td>208</td>\n",
        "      <td>128</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Spring</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -331,6 +343,9 @@
        "      <td>Yes</td>\n",
        "      <td>309</td>\n",
        "      <td>126</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -344,9 +359,15 @@
        "      <td>Yes</td>\n",
        "      <td>209</td>\n",
        "      <td>165</td>\n",
+       "      <td>4.49</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Fall</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -370,6 +391,9 @@
        "      <td>Yes</td>\n",
        "      <td>38</td>\n",
        "      <td>38</td>\n",
+       "      <td>4.26</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Spring</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3131</th>\n",
@@ -383,6 +407,9 @@
        "      <td>No</td>\n",
        "      <td>13</td>\n",
        "      <td>13</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3132</th>\n",
@@ -396,6 +423,9 @@
        "      <td>Yes</td>\n",
        "      <td>106</td>\n",
        "      <td>106</td>\n",
+       "      <td>4.04</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Spring</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3133</th>\n",
@@ -409,6 +439,9 @@
        "      <td>Yes</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
+       "      <td>3.74</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Fall</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3134</th>\n",
@@ -422,10 +455,13 @@
        "      <td>Yes</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Summer</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3135 rows × 10 columns</p>\n",
+       "<p>3135 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -468,30 +504,30 @@
        "3133                        False             Yes                  8   \n",
        "3134                        False             Yes                  4   \n",
        "\n",
-       "      # of Author Bestsellers  \n",
-       "0                           4  \n",
-       "1                          13  \n",
-       "2                         128  \n",
-       "3                         126  \n",
-       "4                         165  \n",
-       "...                       ...  \n",
-       "3130                       38  \n",
-       "3131                       13  \n",
-       "3132                      106  \n",
-       "3133                        8  \n",
-       "3134                        4  \n",
+       "      # of Author Bestsellers  Rating  Awards Count Publication Season  \n",
+       "0                           4    4.12           0.0             Summer  \n",
+       "1                          13    3.86           1.0               Fall  \n",
+       "2                         128    4.35           2.0             Spring  \n",
+       "3                         126    4.63           8.0             Summer  \n",
+       "4                         165    4.49           6.0               Fall  \n",
+       "...                       ...     ...           ...                ...  \n",
+       "3130                       38    4.26           3.0             Spring  \n",
+       "3131                       13    4.47           8.0             Summer  \n",
+       "3132                      106    4.04           1.0             Spring  \n",
+       "3133                        8    3.74           2.0               Fall  \n",
+       "3134                        4    4.28           3.0             Summer  \n",
        "\n",
-       "[3135 rows x 10 columns]"
+       "[3135 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"NYTInfo_Revised.csv\")\n",
+    "df = pd.read_csv(\"Bookinfo.csv\")\n",
     "df"
    ]
   },
