minor changes to data section

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -110,33 +110,51 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Data overview\n",
+    "- Dataset #1 \n",
+    "  - Dataset Name: Characteristics of 'New York Times Bestsellers' in 'Paperback Nonfiction' Category \n",
+    "  - Link to the dataset: Bookinfo.csv (assembled by our group, file added to repo)  \n",
+    "  - Number of observations: 3135\n",
+    "  - Number of variables: 13\n",
     "\n",
-    "For each dataset include the following information\n",
-    "- Dataset #1\n",
-    "  - Dataset Name:\n",
-    "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
-    "- Dataset #2 (if you have more than one!)\n",
-    "  - Dataset Name:\n",
-    "  - Link to the dataset:\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
-    "- etc\n",
+    "For our curated dataset, we have 12 main variables: book title, author, publisher, year on list, rank on list, max # of weeks on list, whether book contents pertained to current issues, # of awards, publication season, appearance on a celebrity book club list, # of previous bestseller books by the same author, and average rating on Goodreads. We also have one additional variable, # of weeks on list, which was included to help generate data for the max # of weeks on list variable.   \n",
     "\n",
-    "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n",
+    "The book title, author, and publisher data is in a string/object format, while the year on list and rank on list data is in an int format. The data pertaining to these five variables was pulled from _The New York Times_ website using HTTP Requests from the NYT Books API, and we specifically looked at the weekly lists published for the 'Paperback Nonfiction' category from January 5, 2020 to December 31, 2023.\n",
     "\n",
-    "If you plan to use multiple datasets, add a few sentences about how you plan to combine these datasets."
+    "For the current context variable, we looked at book summaries on goodreads and determined if the book discussed current cultural, political, or any other type of issue versus if it was timeless or historical. The datatype is either 'Yes' if the book does have current context or 'No' if it does not.\n",
+    "\n",
+    "For the author to bestsellers and contiguous stretches on the bestselling lists for each unique title, we called HTTP Requests from the NYT Books API, and converted the data into CSV palatable for usage. The data we have, being the unique titles and author names are Strings, whereas the counts for both the number of publications and the number of contiguous weeks on the list are int datatypes.\n",
+    "\n",
+    "For the appearance on a celebrity book club list variable, we iterated through Bookinfo.csv to check whether each book had appeared on a celebrity's book club list. Specifically we were checking appearances in Reese Witherspoon and Oprah Winfrey's book club lists. The data is stored as a column of booleans corresponding to each title on the Bestseller list.\n",
+    "\n",
+    "For the goodreads info, we first obtained all the unique titles in the Bookinfo.csv. Then, we iterated through them using a web scraper to obtain the publication date/season, the number of awards recieved, and the aggregated rating of the book. \n",
+    "\n",
+    "Below is a collection of links from which we pulled our data:\n",
+    "- Book Title (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Author (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Publisher (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Year on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Rank on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Number of weeks on Bestseller List (https://www.nytimes.com/books/best-sellers/2020/01/05/paperback-nonfiction/)\n",
+    "- Whether book contents pertained to current issues (https://www.goodreads.com/)\n",
+    "- Number of awards (https://www.goodreads.com/)\n",
+    "- Publication season (https://www.goodreads.com/)\n",
+    "- Appearance on a celebrity book club list (https://www.booklistqueen.com/oprah-winfrey-books/, https://reesesbookclub.com/article/4eRlfCOXueqPrm6ZnQpzwl)\n",
+    "- Number of previous bestseller books by the author (https://www.goodreads.com/)\n",
+    "- Average rating on Goodreads (https://www.goodreads.com/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset #1 (use name instead of number here)"
+    "## Characteristics of 'New York Times Bestsellers' in 'Paperback Nonfiction' Category"
    ]
   },
   {
@@ -145,8 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION \n",
+    "#Data wrangling using NYT Books API\n",
     "import requests\n",
     "from datetime import datetime, timedelta\n",
     "import time\n",
@@ -215,6 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data wrangling for 'max # of weeks on list' variable\n",
     "authors = {}\n",
     "titles = {}\n",
     "\n",
@@ -527,7 +545,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"Bookinfo.csv\")\n",
-    "df"
+    "df #final dataset"
    ]
   },
   {
