--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -677,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rating of Book on Good Reads\n",
+    "### Rating of Book on Goodreads\n",
     "\n",
     "The first scatter plot visualizes the relationship between the average New York Times rank (lower is better) and ratings of books.\n",
     "\n",
@@ -978,6 +978,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impact of 'Inclusion of Current Events' on Average Rank on List"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1002,15 +1009,6 @@
     "plt.xlabel('Current Context', fontdict={'size': 12})\n",
     "plt.ylabel('Average NYT Bestseller Rank', fontdict={'size': 12})\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "This graph shows that books that include current context are ranked higher on the NYT best sellers list on average."
    ]
   },
   {
@@ -1052,6 +1050,15 @@
     "plt.ylabel('Max Weeks on the NYT Best Sellers List', fontdict={'size': 12})\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "This graph shows that books that include current context are ranked higher on the NYT best sellers list on average."
    ]
   },
   {
