added in background section

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -58,27 +58,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Many of us have read books for pleasure at some point of time in our lives, and oftentimes, looking at the backs of the covers of these books, we see the title, “New York Times Bestseller.” With youthful enthusiasm, we’d look at those books and think of how impressive they are, and we’d think, “Oh, these books must be some of the best books in the world!”\n",
     "\n",
-    "- Include a general introduction to your topic\n",
-    "- Include explanation of what work has been done previously\n",
-    "- Include citations or links to previous work\n",
+    "But what actually is it? Pamela Koehne-Drube4, freelance writer, describes the NYT Bestseller’s list as “the most famous list of bestselling books in the United States”, releasing publications in the NYT Book Review since 1931. However, the list of bestselling books is not as straightforward or cut and dry as they appear to be. The committee “have a proprietary way of analyzing sales data that is kept a closely guarded trade secret … and a lot of the final list placement is also based on editorial decisions rather than on raw sales data.”\n",
     "\n",
-    "This section will present the background and context of your topic and question in a few paragraphs. Include a general introduction to your topic and then describe what information you currently know about the topic after doing your initial research. Include references to other projects who have asked similar questions or approached similar problems. Explain what others have learned in their projects.\n",
+    "Therefore, we’d like to see what actually happens behind the scenes to determine what drives the decision-making behind what factors influence which books are on the Bestseller’s list, specifically in the Paperback Nonfiction category, between the years 2020-2023. Certainly, causation isn’t correlation, but we aim to determine what characteristics in a book do end up correlating in the books reaching the Bestseller category.\n",
     "\n",
-    "Find some relevant prior work, and reference those sources, summarizing what each did and what they learned. Even if you think you have a totally novel question, find the most similar prior work that you can and discuss how it relates to your project.\n",
+    "There has been quite a bit of prior research on the topic, as it is such an important one for any author to make it in the industry, as arriving on the Bestseller’s lists often boosts sales for long term. While there hasn’t been too much research done on the categories correlated with the success of nonfiction books, there have been quite a few analyses on novels by famed authors and literature scientists like Jodie Archer1, who, describes what a bestseller reads like, to see if there’s an algorithm which bestsellers follow. Her dissertation, at least for novels, have proven that there can be algorithms developed which can predict whether novels end up being making bestseller lists up to 86% accuracy, and while a lot of these novels do follow certain schema, she emphasizes the existence of “freak bestsellers” which gained infamy by defying traditional schematics. However, this is a judgment of fiction novels, and we are curious as to see if these trends apply to nonfiction paperbacks as well. Specifically, we wish to pin down which characteristics of these books contribute to them being on the list, characteristics that are not directly related to the quality of writing / the plot of the characters or any other more surface-level analyses.\n",
     "\n",
-    "References can be research publications, but they need not be. Blogs, GitHub repositories, company websites, etc., are all viable references if they are relevant to your project. It must be clear which information comes from which references. (2-3 paragraphs, including at least 2 references)\n",
+    "In her book2, Archer makes considerable sociological commentary on machine-written books, and how following a certain algorithm could guarantee publication, and she makes specific references to certain kinds of imagery and depictions within novels, the usage of specific themes, as well as plot devices the books should use to succeed. She frames the “algorithmic method” by also providing cases of success where these algorithms don’t apply, and uses that message to showcase the importance of natural authors in the writing field.\n",
     "\n",
-    " **Use inline citation through HTML footnotes to specify which references support which statements** \n",
+    "Other authors3 have attempted analyses that are more specific, who aimed to analyze the effects of critic reviews on book sales and have determined that it’s not just the tone of a review which matters, but also the fact of whether the books stay “in conversation” for longer, such as if they appear to be controversial.\n",
     "\n",
-    "For example: After government genocide in the 20th century, real birds were replaced with surveillance drones designed to look just like birds.<a name=\"cite_ref-1\"></a>[<sup>1</sup>](#cite_note-1) Use a minimum of 2 or 3 citations, but we prefer more.<a name=\"cite_ref-2\"></a>[<sup>2</sup>](#cite_note-2) You need enough to fully explain and back up important facts. \n",
+    "Something to take note of is that very few of these authors have attempted to establish a robust means for classification of these best sellers, choosing to either specialize on factors to analyze or focusing more on the content of the writing than the institution itself. The goal of our project is not only to analyze which characteristics of these books get them on the NYT Bestseller’s List, but also to analyze if it is reasonable for these characteristics to be why, and whether the NYT Bestseller’s List is actually representative of the quality of these books. Likewise, there has been quite a bit of focus on works of fiction, and we believe that focusing on nonfiction elements, which don’t necessarily focus on the engagement of plots or character tropes, would allow for a more stable analysis that escapes from “fads” of some kinds.\n",
     "\n",
-    "Note that if you click a footnote number in the paragraph above it will transport you to the proper entry in the footnotes list below.  And if you click the ^ in the footnote entry, it will return you to the place in the main text where the footnote is made.\n",
+    "References:\n",
     "\n",
-    "To understand the HTML here, `<a name=\"#...\"> </a>` is a tag that allows you produce a named reference for a given location.  Markdown has the construciton `[text with hyperlink](#named reference)` that will produce a clickable link that transports you the named reference.\n",
+    "1. ^ Archer, Jodie. “Reading the Bestseller: An Analysis of 20,000 Novels - ProQuest.” Proquest.com, 2014, www.proquest.com/openview/ed3c2c9fdc828bdbd21d29ae1d06105e/1?pq-origsite=gscholar&cbl=18750. Accessed 30 Oct. 2024.\n",
     "\n",
-    "1. <a name=\"cite_note-1\"></a> [^](#cite_ref-1) Lorenz, T. (9 Dec 2021) Birds Aren’t Real, or Are They? Inside a Gen Z Conspiracy Theory. *The New York Times*. https://www.nytimes.com/2021/12/09/technology/birds-arent-real-gen-z-misinformation.html \n",
-    "2. <a name=\"cite_note-2\"></a> [^](#cite_ref-2) Also refs should be important to the background, not some randomly chosen vaguely related stuff. Include a web link if possible in refs as above.\n"
+    "2. ^ Archer, Jodie; and Jockers, Matthew L. “The Bestseller Code.” Google Books, 2016, books.google.com/books?hl=en&lr=&id=F4JzCwAAQBAJ&oi=fnd&pg=PP2&dq=What+specific+factors+have+carried+the+greatest+weight+in+driving+novels+in+the+%27Paperback+Nonfiction%27+category+to+reach+%27New+York+Times+Bestseller%27+status&ots=jshCm50NHQ&sig=6HtmHLJRrE61_-8XeIT4JBRarpA#v=onepage&q&f=false. Accessed 30 Oct. 2024.\n",
+    "\n",
+    "3. ^ Clemente, Michel. ‌“Do Critics Make Bestsellers? Opinion Leaders and the Success of Books.” JOURNAL of MEDIA ECONOMICS, 2024, https://doi.org/10.1080//08997760701193720. Accessed 30 Oct. 2024.\n",
+    "\n",
+    "4. ^ Koehne-Drube, Pamela. “The New York Times Bestseller Lists Explained.” Novlr.org, Novlr, 27 May 2024, www.novlr.org/the-reading-room/the-new-york-times-bestseller-lists-explained. Accessed 30 Oct. 2024.\n"
    ]
   },
   {
