added descriptions to plots

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -764,6 +764,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first plot shows that overall rating likely has little correlation with the average rank of books. We do see however, that all the books on the NYT best sellers list have a rating of 3.4 or higher and a majority of books have a rating above 4 stars. The second plot shows that there could be a possible correlation between books that had a better maximum rank and books that were on the list for a greater amount of weeks. However, it is also possible that since there were more books that had better maximum ranks that naturally more of those books spent  greater amounts of weeks on the list. However, it looks like rating has little to do with this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Number of Awards Won\n",
     "\n",
     "The first scatter plot shows the relationship between the number of awards a book has won and its average NYT rank, with lower ranks (indicating better performance) positioned higher on the plot.\n",
@@ -844,6 +851,13 @@
     "plt.xlabel('Max Rank (Higher is Worse)')\n",
     "plt.ylabel('Max Weeks on the NYT Best Sellers List')\n",
     "plt.grid(True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These graphs shows that overall most of the books have not won very many awards. Most of the books fall within"
    ]
   },
   {
