added descriptions to plots

--- a/EDACheckpoint_Group019-FA24.ipynb
+++ b/EDACheckpoint_Group019-FA24.ipynb
@@ -857,7 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These graphs shows that overall most of the books have not won very many awards. Most of the books fall within"
+    "These graphs shows that overall most of the books have not won very many awards. Most of the books fall within the 0-3 awards won. Overall, there seems to be little correlation between the amount of awards won and how well the book did on the NYT best sellers list."
    ]
   },
   {
