--- a/FinalProject_Group019-FA24.ipynb
+++ b/FinalProject_Group019-FA24.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Names\n",
     "\n",
-    "- Ant Man\n",
+    "- Satya Rajendra\n",
     "- Hulk\n",
     "- Iron Man\n",
     "- Thor\n",
